misspelled arguments fixed

--- a/notebooks/introductions_training.ipynb
+++ b/notebooks/introductions_training.ipynb
@@ -138,14 +138,14 @@
     "Now you should be ready to perform the training:\n",
     "\n",
     "```\n",
-    "python train_model.py train_data.yaml\n",
+    "python train_model.py train_smoke.yaml\n",
     "```\n",
     "\n",
     "A trained model and training history can be found as `train_smoke.pth` and `train_smoke_history.pickle` in the `experiments` directory. ROC curves are saved in the `ROC_train_smoke` directory as `roc-e1.png`, `roc-e2.png` etc, named after the number of the epoch on which it's been drawn.\n",
     "\n",
     "### Multiple yaml files in a directory\n",
     "\n",
-    "The idea is similar here: Now you should locate all the yaml files constructed as the presented yaml file `train_smoke.yaml`. There are a directory `training_multiple_smoke` in `/configs/training/` in which there are three yaml files named as `smoke0.yaml`, `smoke1.yaml` and `smoke2.yaml`. Each yaml file has different yaml files for training and validation as follows\n",
+    "The idea is similar here: Now you should locate all the yaml files constructed as the presented yaml file `train_smoke.yaml`. There are a directory `train_multiple_smoke` in `/configs/training/` in which there are three yaml files named as `smoke0.yaml`, `smoke1.yaml` and `smoke2.yaml`. Each yaml file has different yaml files for training and validation as follows\n",
     "\n",
     "`smoke0.yaml`\n",
     "```\n",
@@ -177,10 +177,10 @@
     "Terminal command for training is now\n",
     "\n",
     "```\n",
-    "python train_model.py training_multiple\n",
+    "python train_model.py train_multiple_smoke\n",
     "```\n",
     "\n",
-    "Trained models (of which there are now three) are now saved as `smoke0.pth`, `smoke1.pth` and `smoke2.pth` in the `training_multiple_smoke` subdirectory (named after the directory in which the yaml files are located) of the `experiments` directory. Similarly there are three similarly named `pickle` files for each training history. ROC curves can be found from three different directories that are also named after the yaml files."
+    "Trained models (of which there are now three) are now saved as `smoke0.pth`, `smoke1.pth` and `smoke2.pth` in the `train_multiple_smoke` subdirectory (named after the directory in which the yaml files are located) of the `experiments` directory. Similarly there are three similarly named `pickle` files for each training history. ROC curves can be found from three different directories that are also named after the yaml files."
    ]
   }
  ],
